--- a/index.html
+++ b/index.html
@@ -3,33 +3,29 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Móveis customizados</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Inter:slnt,wght@-10..0,100..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <title>Fotoblog</title>
 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="hero">
-        <img src="images/img1.jpeg" alt="Desenho de uma pessoa em uma sala com móveis.">
-        <h1>Ambientes <span>únicos</span> para você!</h1>
-        <p>Nós criamos ambientes <strong>exclusivos</strong> e <strong>únicos</strong>, com muito bom gosto e 
-            profissionalismo, investimos tempo e <span>dedicação no seu projeto.</span>
-        </p>
-        <p>
-            Tenha <span>ambientes limpos</span> e bem decorados, transmitindo <strong>elegância e finese</strong> para 
-            todo aquele que estiver ali.
-        </p>
-    </div>
-    <div id="footer">
-        <div id="line"></div>
-        <a href="https://instagram.com">Instagram</a>
-        <a href="mailto:contato@moveisparavc.com">Fale conosco</a>
-    </div>
-    <img id="balls" src="images/balls.svg" alt="Bolinhas laranjas no canto da página." />
+    <main>
+        <header>
+            <div class="logo">
+                <a href="#"><img src="images/camera.svg" alt="Fotoblog"></a>
+            </div>
+            <nav>
+                <ul>
+                    <li>Home</li>
+                    <li>Galeria</li>
+                </ul>
+            </nav>
+            <div class="search"></div>
+            <div class="bio"></div>
+        </header>
+    </main>
 </body>
 </html>
